--- a/grad_school_finder.html
+++ b/grad_school_finder.html
@@ -78,10 +78,10 @@
                 <div class="my-3" style="border: 0.01em solid gainsboro">
                 </div>
                 <div class="row">
-                    <div class="col-3 border border-primary">
+                    <div class="col-3">
                         <label><b>Course:</b></label>
                     </div>
-                    <div class="col-6 border border-primary">
+                    <div class="col-6">
                         <select class="form-control form-control-sm">
                           <option>Aerospace / Aeronautical</option>
                         </select>
@@ -90,16 +90,16 @@
                 <div class="my-3 w-75" style="border: 0.02em solid gainsboro">
                 </div>
                 <div class="row">
-                    <div class="col-3 border border-primary">
+                    <div class="col-3">
                         <label><b>GRE</b></label>
                     </div>
-                    <div class="col-3 border border-primary" style="padding-right: 15px;padding-left: 15px;">
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
                         <b>Verbal Score</b>
                         <select class="form-control form-control-sm mt-1">
                           <option>Aerospace / Aeronautical</option>
                         </select>
                     </div>
-                    <div class="col-3 border border-primary" style="padding-right: 15px;padding-left: 15px;">
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
                          <b>Quant Score:</b>
                         <select class="form-control form-control-sm mt-1">
                           <option>Aerospace / Aeronautical</option>
@@ -109,10 +109,10 @@
                 <div class="my-3 w-75" style="border: 0.02em solid gainsboro">
                 </div>
                 <div class="row">
-                    <div class="col-3 border border-primary">
+                    <div class="col-3">
                         <label><b>English Test</b></label>
                     </div>
-                    <div class="col-3 border border-primary" style="padding-right: 15px;padding-left: 15px;">
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
                         <div class="form-check">
                           <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
                           <label class="form-check-label" for="exampleRadios1">
@@ -126,18 +126,186 @@
                           </label>
                         </div>
                     </div>
-                    <div class="col-3 border border-primary" style="padding-right: 15px;padding-left: 15px;">
-                         <b>Quant Score:</b>
-                        <select class="form-control form-control-sm mt-1">
-                          <option>Aerospace / Aeronautical</option>
-                        </select>
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
+                         <b>English test score (out of 9 for IELTS)</b>
+                          <input class="form-control form-control-sm" type="text">
+                    </div>
+                </div>
+                <div class="my-3 w-75" style="border: 0.02em solid gainsboro">
+                </div>                    
+                <div class="row">
+                    <div class="col-3">
+                        <label><b>Undergrad academics<br>(out of 10 for CGPA)</b></label>
+                    </div>
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                          <label class="form-check-label" for="exampleRadios1">
+                            CGPA/Credit based
+                          </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                          <label class="form-check-label" for="exampleRadios2">
+                            Percentage
+                          </label>
+                        </div>
+                    </div>
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
+                         <b>Undergrad Score:</b>
+                          <input class="form-control form-control-sm" type="text">
+                    </div>
+                </div>
+                <div class="my-3 w-75" style="border: 0.02em solid gainsboro">
+                </div>                                    
+                <div class="row">
+                    <div class="col-3">
+                        <label><b>Relevant Work Experience<br>(in months)</b></label>
+                    </div>
+
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
+                          <input class="form-control form-control-sm" type="text">
                     </div>
                 </div>
                 <div class="my-3 w-75" style="border: 0.02em solid gainsboro">
                 </div>                
+                <div class="row">
+                    <div class="col-3">
+                        <label><b>Technical Papers Published<br>(Select highest level of publication)</b></label>
+                    </div>
+                    <div class="col-6" style="padding-right: 15px;padding-left: 15px;">
+                        <select class="form-control form-control-sm mt-1">
+                          <option>None</option>
+                          <option>Local</option>
+                          <option>National</option>    
+                          <option>International</option>    
+                        </select>
+                    </div>
+                </div>
+                <div class="my-3 w-75" style="border: 0.02em solid gainsboro">
+                </div>
+                <div class="row my-3">
+                    <div class="col-3">
+                        <label><b>SOP Rating</b></label>
+                    </div>
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
+                        <input type="range" class="custom-range" min="0" max="10" id="customRange2">
+                    </div>
+                </div>
+                <div class="row my-3">
+                    <div class="col-3">
+                        <label><b>LOR Rating</b></label>
+                    </div>
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
+                        <input type="range" class="custom-range" min="0" max="10" id="customRange2">
+                    </div>
+                </div>
+                <div class="row my-3">
+                    <div class="col-3">
+                        <label><b>Extracurricular Rating</b></label>
+                    </div>
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
+                        <input type="range" class="custom-range" min="0" max="10" id="customRange2">
+                    </div>
+                </div>
+                <div class="row my-3">
+                    <div class="col-3">
+                        <label><b>Community Service Rating</b></label>
+                    </div>
+                    <div class="col-3" style="padding-right: 15px;padding-left: 15px;">
+                        <input type="range" class="custom-range" min="0" max="10" id="customRange2">
+                    </div>
+                </div>
+                <div class="row mt-3 mb-5">
+                    <div class="col-9">
+                        <button type="button" class="btn w-100" style="background: #FF9800">SHOOT IT</button>
+                    </div>
+                </div>    
             </div>                
-            
         </div>
+        <footer class="container-fluid" id="fgrey">
+                <div class="row pt-3 justify-content-center">
+                    <div class="col">
+                        <div class="float-right">
+                            Looking for help?
+                        </div>	
+                    </div>
+                    <div class="col pl-0">
+                        <button type="button" class="btn btn-sm rounded btn-primary">CONTACT US</button>
+                    </div>	
+                </div>
+                <div class="container">
+                    <div class="row m-3">
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>UNIVERSITY INFORMATION</strong>
+                                <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+                                <ul class="card-text list-unstyled">
+                                    <li>University Reviews</li>
+                                    <li>Profile evaluator</li>
+                                    <li>Compare universities</li>
+                                    <li>Application Deadlines</li>
+                                    <li>Course Descriptions</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>EXPLORE YOCKET</strong>
+                                <ul class="card-text list-unstyled">
+                                    <li>Similar profiles</li>
+                                    <li>Admits and rejects</li>
+                                    <li>Roommate finder</li>
+                                    <li>Discussions</li>
+                                    <li>Read Articles</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>SERVICES</strong>
+                                <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+                                <ul class="card-text list-unstyled">
+                                    <li>Send transcripts</li>
+                                    <li>Education Loans</li>
+                                    <li>Forex Card</li>
+                                    <li>University fee payment</li>
+                                    <li>Health/Travel Insurance</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>MORE</strong>
+                                <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+                                <ul class="card-text list-unstyled">
+                                    <li>Contact us | Work with us</li>
+                                    <li>Facebook | Twitter</li>
+                                    <li>About Us</li>
+                                    <li>Campus Ambassador</li>
+                                    <li>Privacy | Terms</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto pb-4">
+                        <select class="form-control form-control-sm">
+                          <option>Select language</option>
+                        </select>
+                        <small>Powered by Google <strong>Translate</strong></small>
+                    </div>	
+                </div>	
+        </footer>        
         <script src="js/jquery-3.3.1.slim.min.js" ></script>
 	    <script src="js/popper.min.js" ></script>
 	    <script src="js/bootstrap.js" ></script> 
